--- a/packages/templating/templating_tests.html
+++ b/packages/templating/templating_tests.html
@@ -350,3 +350,8 @@
 <template name="test_template_trickylabels_a2">
   <div>foo</div>
 </template>
+
+<!-- Test for issue #801 - Each handling of falsy values eg. [1, 2, null, undefined] -->
+<template name="test_template_issue801">
+{{#each values}}{{this}}{{/each}}
+</template>
