--- a/examples/other/login-demo/login-demo.html
+++ b/examples/other/login-demo/login-demo.html
@@ -7,7 +7,7 @@
     {{> main}}
   </div>
   <div id="readme">
-    <p>This is a minimal app where you need to log in to see the database.</p>
+    <p>This is a minimal app where you need to log in to see the database.  There's also a loading screen while logging in and until the initial data is loaded.</p>
     <p>There are three top-level screens corresponding to the three possible states of the app:</p>
     <ul>
       <li>Logging in / Loading &mdash; when <code>&#123;{loggingIn}}</code> is true</li>
